--- a/build-docker-image.yml
+++ b/build-docker-image.yml
@@ -55,7 +55,8 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.api-gateway-login-ecr.outputs.registry }}
         ECR_REPOSITORY: spring-petclinic-api-gateway
-        IMAGE_TAG: devops_${{inputs.image.tag}}
+        IMAGE_TAG: devops_${{inputs.image_name}}
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --build-arg ARTIFACT_NAME=${{inputs.image_name}}/target/${{inputs.image_name}}-${{inputs.tag}} --build-arg EXPOSED_PORT=${{inputs.port}} .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        docker push 957507561258.dkr.ecr.eu-west-3.amazonaws.com/service-api-gateway:latest
