--- a/build-docker-image.yml
+++ b/build-docker-image.yml
@@ -34,19 +34,29 @@ jobs:
         distribution: 'adopt'
         cache: maven
 
-    # build the application's microservices and run tests
+    # build the application's microservices and run tests 
     - name: Build with Maven
       run: |
         cd  ${{inputs.image_name}}
         mvn -B package --file pom.xml
 
-    - name: Build and push Docker image
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: eu-west-3
+
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+
+    - name: Build, tag, and push image to Amazon ECR - api-gateway 
       env:
-        ECR_REGISTRY: ${{ secrets.steps.login-ecr.outputs.registry}}
+        ECR_REGISTRY_ID: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: spring-petclinic-api-gateway
         IMAGE_TAG: devops_${{inputs.image_name}}
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-
+        docker build -t $ECR_REGISTRY_ID/$ECR_REPOSITORY:$IMAGE_TAG --build-arg ARTIFACT_NAME=${{inputs.image_name}}/target/${{inputs.image_name}}-${{inputs.tag}} --build-arg EXPOSED_PORT=${{inputs.port}} .
+        docker push $ECR_REGISTRY_ID/$ECR_REPOSITORY:$IMAGE_TAG
         
