--- a/build-docker-image.yml
+++ b/build-docker-image.yml
@@ -50,6 +50,10 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
+   # Print the ECR Registry URL to check the output
+    - name: Check ECR Registry Output
+      run: 
+        echo "ECR Registry: ${{ steps.login-ecr.outputs.registry }}"
 
     - name: Build, tag, and push image to Amazon ECR - spring-petclinic-api-gateway
       env:
