--- a/build-docker-image.yml
+++ b/build-docker-image.yml
@@ -58,5 +58,5 @@ jobs:
         IMAGE_TAG: devops_${{inputs.image_name}}
       run: 
          aws ecr get-login-password --region eu-west-3 | docker login --username AWS --password-stdin $ECR_REGISTRY_ID
-         docker build -t $ECR_REGISTRY_ID/$ECR_REPOSITORY:$IMAGE_TAG --build-arg ARTIFACT_NAME=/${{inputs.image_name}}/target/${{inputs.image_name}}-${{inputs.tag}} --build-arg EXPOSED_PORT=${{inputs.port}} .
-         docker push $ECR_REGISTRY_ID/$ECR_REPOSITORY:$IMAGE_TAG
+         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --build-arg ARTIFACT_NAME=${{inputs.image_name}}/target/${{inputs.image_name}}-${{inputs.tag}} --build-arg EXPOSED_PORT=${{inputs.port}} .
+         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
