--- a/build-docker-image.yml
+++ b/build-docker-image.yml
@@ -55,8 +55,9 @@ jobs:
       env:
         ECR_REGISTRY_ID: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: spring-petclinic-api-gateway
-        IMAGE_TAG: devops_${{inputs.image_name}}
+        IMAGE_NAME: devops_${{inputs.image_name}}
+        IMAGE_TAG: devops_${{inputs.tag}}
       run: 
          aws ecr get-login-password --region eu-west-3 | docker login --username AWS --password-stdin $ECR_REGISTRY
-         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --build-arg ARTIFACT_NAME=${{inputs.image_name}}/target/${{inputs.image_name}}-${{inputs.tag}} --build-arg EXPOSED_PORT=${{inputs.port}} .
-         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_NAME:IMAGE_TAG --build-arg ARTIFACT_NAME=${{inputs.image_name}}-${{inputs.tag}}/target/${{inputs.image_name}}-${{inputs.tag}} --build-arg EXPOSED_PORT=${{inputs.port}} .
+         docker push $ECR_REGISTRY/$ECR_REPOSITORY:IMAGE_NAME:$IMAGE_TAG
