--- a/build-docker-image.yml
+++ b/build-docker-image.yml
@@ -1,4 +1,4 @@
-name: Create and Publish Docker Image - service-api-gateway:latest
+name: Create and Publish Docker Image
 
 on:
   workflow_call:
@@ -45,19 +45,20 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID}}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
-        aws-region: eu-west-3
+        aws-region: ${{ env.AWS_REGION }}    
 
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
    
-    - name: Build, tag, and push image to Amazon ECR - spring-petclinic-api-gateway
+    - name: Build, tag, and push image to Amazon ECR
+      id: build-image
       env:
-        ECR_REGISTRY_ID: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: spring-petclinic-api-gateway
-        IMAGE_NAME: devops_${{inputs.image_name}}
-        IMAGE_TAG: devops_${{inputs.tag}}
+        IMAGE_TAG: ${{ github.sha }}
       run: 
-         aws ecr get-login-password --region eu-west-3 | docker login --username AWS --password-stdin $ECR_REGISTRY
-         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_NAME:IMAGE_TAG --build-arg ARTIFACT_NAME=${{inputs.image_name}}-${{inputs.tag}}/target/${{inputs.image_name}}-${{inputs.tag}} --build-arg EXPOSED_PORT=${{inputs.port}} .
-         docker push $ECR_REGISTRY/$ECR_REPOSITORY:IMAGE_NAME:$IMAGE_TAG
+         aws ecr get-login-password --region aws-region | docker login --username AWS --password-stdin $ECR_REGISTRY
+         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+         echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> env.GITHUB_OUTPUT
