--- a/build-docker-image.yml
+++ b/build-docker-image.yml
@@ -56,8 +56,12 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: spring-petclinic-api-gateway
-        IMAGE_TAG: ${{ github.sha }}
-      run: 
-         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-         echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> env.GITHUB_OUTPUT
+        IMAGE_TAG: devops_${{inputs.image_name}}
+        #IMAGE_TAG: ${{ github.sha }}
+      run: |
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --build-arg ARTIFACT_NAME=${{inputs.image_name}}/target/${{inputs.image_name}}-${{inputs.tag}} --build-arg EXPOSED_PORT=${{inputs.port}} .
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IM
+      #run: 
+         #docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+         #docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+         
