--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -55,13 +55,10 @@ jobs:
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: spring-petclinic-api-gateway
+        ECR_REPOSITORY: petclinic-api-gateway
         IMAGE_TAG: devops_${{inputs.image_name}}
-        #IMAGE_TAG: ${{ github.sha }}
+        
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --build-arg ARTIFACT_NAME=${{inputs.image_name}}/target/${{inputs.image_name}}-${{inputs.tag}} --build-arg EXPOSED_PORT=${{inputs.port}} .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IM
-      #run: 
-         #docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-         #docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-         
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+      
