--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -13,9 +13,10 @@ on:
         required: true
         type: string
     secrets:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_REGION: ${{ secrets.AWS_REGION }}
+        AWS_ACCESS_KEY_ID:
+            required: true
+        AWS_SECRET_ACCESS_KEY:
+            required: true
 
 jobs:
   build:
@@ -26,7 +27,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-
     - name: Set up JDK ${{matrix.java}}
       uses: actions/setup-java@v2
       with:
@@ -34,32 +34,28 @@ jobs:
         distribution: 'adopt'
         cache: maven
 
+    # build the application's microservices and run tests 
     - name: Build with Maven
       run: |
-        cd ${{inputs.image_name}}
+        cd  ${{inputs.image_name}}
         mvn -B package --file pom.xml
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID}}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
-        aws-region: ${{ secrets.AWS_REGION }}    
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: eu-west-3
 
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Build, tag, and push image to Amazon ECR
-      id: build-image
+    - name: Build, tag, and push image to Amazon ECR - config server 
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: petclinic-api-gateway
-        IMAGE_TAG: ${{inputs.image_name}}
-        ARTIFACT_NAME: ${{inputs.image_name}}/target/${{inputs.image_name}}-${{inputs.tag}}
-        EXPOSED_PORT: ${{inputs.port}}
-        
+        IMAGE_TAG: devops_${{inputs.image_name}}
       run: |
-        docker build -t 957507561258/:$IMAGE_TAG --build-arg ARTIFACT_NAME=$ARTIFACT_NAME --build-arg EXPOSED_PORT=$EXPOSED_PORT .
-        docker push 957507561258/petclinic-api-gateway:$IMAGE_TAG
-        
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --build-arg ARTIFACT_NAME=${{inputs.image_name}}/target/${{inputs.image_name}}-${{inputs.tag}} --build-arg EXPOSED_PORT=${{inputs.port}} .
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
