--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -45,7 +45,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: eu-west-3
+        aws-region: us-east-1
 
     - name: Login to Amazon ECR
       id: login-ecr
@@ -54,7 +54,7 @@ jobs:
     - name: Build, tag, and push image to Amazon ECR - config server 
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: petclinic-api-gateway
+        ECR_REPOSITORY: devops_petclinic_1
         IMAGE_TAG: devops_${{inputs.image_name}}
       run: |
         docker build -t petclinic-api-gateway .
