--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -57,6 +57,6 @@ jobs:
         ECR_REPOSITORY: devops_petclinic_1
         IMAGE_TAG: devops_${{inputs.image_name}}
       run: |
-        docker build -t petclinic-api-gateway .
-        docker tag service-api-gateway:latest public.ecr.aws/h7a4i4a9/petclinic-api-gateway:latest
-        docker push public.ecr.aws/h7a4i4a9/petclinic-api-gateway:latest
+        aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/h7a4i4a9
+        docker tag service-api-gateway:latest public.ecr.aws/h7a4i4a9/devops_petclinic_1:latest
+        docker push public.ecr.aws/h7a4i4a9/devops_petclinic_1:latest
