--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -46,7 +46,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID}}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
-        aws-region: us-east-1
+        aws-region: eu-west-3
 
     - name: Login to Amazon ECR
       id: login-ecr
@@ -63,7 +63,7 @@ jobs:
         IMAGE_TAG: ${{inputs.tag}}
         DOCKER_IMAGE_NAME: ${{ steps.get-image-name.outputs.image_name }}
       run: |
-        aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin $ECR_REGISTRY/$ECR_REPOSITORY
+        aws ecr-public get-login-password --region eu-west-3 | docker login --username AWS --password-stdin $ECR_REGISTRY/$ECR_REPOSITORY
         DOCKER_TAG="${{inputs.image_name}}-${{inputs.tag}}"
         docker tag ${{inputs.image_name}}:latest $ECR_REGISTRY/$ECR_REPOSITORY:$DOCKER_TAG
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$DOCKER_TAG
