--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -1,69 +1,26 @@
-name: Create and Publish Docker Image
+name: Build and Push Docker Image
 
 on:
-  workflow_call:
-    inputs:
-      image_name:
-        required: true
-        type: string
-      tag:
-        required: true
-        type: string
-      port:
-        required: true
-        type: string
-    secrets:
-        AWS_ACCESS_KEY_ID:
-            required: true
-        AWS_SECRET_ACCESS_KEY:
-            required: true
+  push:
+    branches:
+      - main  # ou le nom de votre branche principale
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        java: [ '17' ]
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout Repository
+      uses: actions/checkout@v2
 
-    - name: Set up JDK ${{matrix.java}}
-      uses: actions/setup-java@v2
-      with:
-        java-version: ${{matrix.java}}
-        distribution: 'adopt'
-        cache: maven
+    - name: Build Docker Image
+      run: docker build -t service-api-gateway .
 
-    # build the application's microservices and run tests 
-    - name: Build with Maven
-      run: |
-        cd  ${{inputs.image_name}}
-        mvn -B package --file pom.xml
+    - name: Authenticate to Amazon ECR Public
+      run: aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/h7a4i4a9
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID}}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
-        aws-region: eu-west-3
+    - name: Tag Docker Image
+      run: docker tag dservice-api-gateway:latest public.ecr.aws/h7a4i4a9/devops_petclinic_1/service-api-gateway:latest
 
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
-
-    - name: Get Docker Image Name
-      id: get-image-name
-      run: echo "::set-output name=image_name::$(basename ${{inputs.image_name}})"
-
-    - name: Build, tag, and push image to Amazon ECR 
-      env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: devops_petclinic_1
-        IMAGE_TAG: ${{inputs.tag}}
-        DOCKER_IMAGE_NAME: ${{ steps.get-image-name.outputs.image_name }}
-      run: |
-        aws ecr-public get-login-password --region eu-west-3 | docker login --username AWS --password-stdin $ECR_REGISTRY/$ECR_REPOSITORY
-        DOCKER_TAG="${{inputs.image_name}}-${{inputs.tag}}"
-        docker tag ${{inputs.image_name}}:latest $ECR_REGISTRY/$ECR_REPOSITORY:$DOCKER_TAG
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$DOCKER_TAG
+    - name: Push Docker Image to Amazon ECR Public
+      run: docker push public.ecr.aws/h7a4i4a9/devops_petclinic_1/service-api-gateway:latest
