--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -14,14 +14,14 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Build Docker Image
-      run: docker build -t service-api-gateway .
+      run: docker build -t devops_petclinic_1 .
 
     - name: Authenticate to Amazon ECR Public
-      run: aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/h7a4i4a9
+      run: aws ecr-public get-login-password --region eu-west-3 | docker login --username AWS --password-stdin public.ecr.aws/h7a4i4a9
 
     - name: Tag Docker Image
-      run: docker tag dservice-api-gateway:latest public.ecr.aws/h7a4i4a9/devops_petclinic_1/service-api-gateway:latest
+      run: docker tag devops_petclinic_1:latest public.ecr.aws/h7a4i4a9/devops_petclinic_1:latest
 
     - name: Push Docker Image to Amazon ECR Public
-      run: docker push public.ecr.aws/h7a4i4a9/devops_petclinic_1/service-api-gateway:latest
+      run: docker push public.ecr.aws/h7a4i4a9/devops_petclinic_1:latest
       
