--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -3,25 +3,27 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - gateway  # ou le nom de votre branche principale
-
+    - gateway  # ou le nom de votre branche principale
 jobs:
-  build:
-    runs-on: ubuntu-latest
+    build:
+        runs-on: ubuntu-latest
+        steps:
+        - name: Checkout Repository
+          uses: actions/checkout@v2
+      
+        - name: Setup Node.js
+          uses: actions/setup-node@v4
+          with:
+            node-version: '14'  # Choisissez la version de Node.js que vous souhaitez utiliser
+      
+        - name: Build Docker Image
+          run: docker build -t devops_petclinic_1 .     
+        - name: Authenticate to Amazon ECR Public
+          run: aws ecr-public get-login-password --region eu-west-3 | docker login --username AWS --password-stdin public.ecr.aws/h7a4i4a9
 
-    steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2
+        - name: Tag Docker Image
+          run: docker tag devops_petclinic_1:latest public.ecr.aws/h7a4i4a9/devops_petclinic_1:latest
 
-    - name: Build Docker Image
-      run: docker build -t devops_petclinic_1 .
-
-    - name: Authenticate to Amazon ECR Public
-      run: aws ecr-public get-login-password --region eu-west-3 | docker login --username AWS --password-stdin public.ecr.aws/h7a4i4a9
-
-    - name: Tag Docker Image
-      run: docker tag devops_petclinic_1:latest public.ecr.aws/h7a4i4a9/devops_petclinic_1:latest
-
-    - name: Push Docker Image to Amazon ECR Public
-      run: docker push public.ecr.aws/h7a4i4a9/devops_petclinic_1:latest
+        - name: Push Docker Image to Amazon ECR Public
+          run: docker push public.ecr.aws/h7a4i4a9/devops_petclinic_1:latest
       
