--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -21,10 +21,10 @@ jobs:
         - name: Authenticate to Amazon ECR Public
           uses: aws-actions/amazon-ecr-login@v1
           with:
-            registry: public.ecr.aws
-      
-            aws-region: eu-west-3
-            run: aws ecr-public get-login-password --region eu-west-3 | docker login --username AWS --password-stdin public.ecr.aws/h7a4i4a9
+           registry: public.ecr.aws
+           aws-region: eu-west-3
+           registry-type: public
+           run: aws ecr-public get-login-password --region eu-west-3 | docker login --username AWS --password-stdin public.ecr.aws/h7a4i4a9
 
         - name: Tag Docker Image
           run: docker tag devops_petclinic_1:latest public.ecr.aws/h7a4i4a9/devops_petclinic_1:latest
