--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -22,9 +22,9 @@ jobs:
           uses: aws-actions/amazon-ecr-login@v1
           with:
            registry: public.ecr.aws
-           aws-region: eu-west-3
+           aws-region: us-east-1
            registry-type: public
-           run: aws ecr-public get-login-password --region eu-west-3 | docker login --username AWS --password-stdin public.ecr.aws/h7a4i4a9
+           run: aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/h7a4i4a9
 
         - name: Tag Docker Image
           run: docker tag devops_petclinic_1:latest public.ecr.aws/h7a4i4a9/devops_petclinic_1:latest
