--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -19,14 +19,21 @@ jobs:
         - name: Build Docker Image
           run: docker build -t devops_petclinic_1 .     
         - name: Authenticate to Amazon ECR Public
-          uses: aws-actions/amazon-ecr-login@v1
+          uses: aws-actions/configure-aws-credentials@v2
           with:
-            registry: public.ecr.aws
+            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
             aws-region: us-east-1
-            registry-type: public
-        - name: Authenticate Docker Login
+        
+        - name: Get ECR Public Login Password
+          id: ecr-login
           run: aws ecr-public get-login-password --region us-east-1
-               docker login --username AWS --password-stdin public.ecr.aws/h7a4i4a9  
+        
+        - name: Docker Login
+          run: docker login --username AWS --password-stdin public.ecr.aws/h7a4i4a9
+          env:
+            DOCKER_PASSWORD: ${{ steps.ecr-login.outputs.password }}
+        
 
         - name: Tag Docker Image
           run: docker tag devops_petclinic_1:latest public.ecr.aws/h7a4i4a9/devops_petclinic_1:latest
