--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -30,11 +30,9 @@ jobs:
           run: aws ecr-public get-login-password --region us-east-1
         
         - name: Docker Login
-          run: docker login --username AWS --password-stdin public.ecr.aws/h7a4i4a9
-          env:
-            DOCKER_PASSWORD: ${{ steps.ecr-login.outputs.password }}
+          run: |
+            echo ${{ steps.ecr-login.outputs.password }} | docker login --username AWS --password-stdin public.ecr.aws/h7a4i4a9
         
-
         - name: Tag Docker Image
           run: docker tag devops_petclinic_1:latest public.ecr.aws/h7a4i4a9/devops_petclinic_1:latest
 
