--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -30,8 +30,12 @@ jobs:
           run: aws ecr-public get-login-password --region us-east-1
         
         - name: Docker Login
-          run: |
-            echo ${{ steps.ecr-login.outputs.password }} | docker login --username AWS --password-stdin public.ecr.aws/h7a4i4a9
+          uses: docker/login-action@v1
+          with:
+            registry: public.ecr.aws/h7a4i4a9
+            username: AWS
+            password: ${{ steps.ecr-login.outputs.password }}
+            run: echo "${{ steps.ecr-login.outputs.password }}" | docker login --username AWS --password-stdin -i public.ecr.aws/h7a4i4a9
         
         - name: Tag Docker Image
           run: docker tag devops_petclinic_1:latest public.ecr.aws/h7a4i4a9/devops_petclinic_1:latest
