--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -34,9 +34,8 @@ jobs:
           with:
             registry: public.ecr.aws/h7a4i4a9
             username: AWS
-            password: ${{ steps.ecr-login.outputs.password }}
+            password: ${{ secrets.REGISTRY_PASSWD }}
             run: echo "${{ steps.ecr-login.outputs.password }}" | docker login --username AWS --password-stdin -i public.ecr.aws/h7a4i4a9
-        
         - name: Tag Docker Image
           run: docker tag devops_petclinic_1:latest public.ecr.aws/h7a4i4a9/devops_petclinic_1:latest
 
