--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -17,28 +17,27 @@ jobs:
             node-version: '14'  
       
         - name: Build Docker Image
-          run: docker build -t devops_petclinic_1 .     
+          run: docker build -t service-api-gateway:latest .     
         - name: Authenticate to Amazon ECR Public
           uses: aws-actions/configure-aws-credentials@v2
           with:
             aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
             aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            aws-region: us-east-1
+            aws-region: ${{ secrets.AWS_REGION }}
         
         - name: Get ECR Public Login Password
           id: ecr-login
-          run: aws ecr-public get-login-password --region us-east-1
+          run: aws ecr-public get-login-password --region ${{ secrets.AWS_REGION }}
         
         - name: Docker Login
           uses: aws-actions/amazon-ecr-login@v1
           with:
             registry: public.ecr.aws
-            aws-region: us-east-1
             registry-type: public
             run: echo "${{ steps.ecr-login.outputs.password }}" | docker login --username AWS --password-stdin -i public.ecr.aws/h7a4i4a9
         - name: Tag Docker Image
-          run: docker tag devops_petclinic_1:latest public.ecr.aws/h7a4i4a9/devops_petclinic_1:latest
+          run: docker tag service-api-gateway:latest public.ecr.aws/h7a4i4a9/spring_petclinic_api-gateway/service-api-gateway:latest
 
         - name: Push Docker Image to Amazon ECR Public
-          run: docker push public.ecr.aws/h7a4i4a9/devops_petclinic_1:latest
+          run: docker push public.ecr.aws/h7a4i4a9/devops_petclinic_1/service-api-gateway:latest
       
