--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -35,8 +35,8 @@ jobs:
             registry-type: public
             run: echo "${{ steps.ecr-login.outputs.password }}" | docker login --username AWS --password-stdin -i public.ecr.aws/h7a4i4a9
         - name: Tag Docker Image
-          run: docker tag service-api-gateway:latest public.ecr.aws/h7a4i4a9/spring_petclinic_api-gateway/service-api-gateway:latest
+          run: docker tag service-api-gateway:latest public.ecr.aws/h7a4i4a9/spring_petclinic_api-gateway:service-api-gateway
 
         - name: Push Docker Image to Amazon ECR Public
-          run: docker push public.ecr.aws/h7a4i4a9/devops_petclinic_1/service-api-gateway:latest
+          run: docker push public.ecr.aws/h7a4i4a9/devops_petclinic_1:service-api-gateway
       
