--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -38,7 +38,7 @@ jobs:
             registry-type: public
             run: echo "${{ steps.ecr-login.outputs.password }}" | docker login --username AWS --password-stdin -i $ECR_REGISTRY
         - name: Tag Docker Image
-          run: docker tag spring-petclinic-api-gateway:latest $ECR_REGISTRY/$ECR_REPOSITORY:latest
+          run: docker tag spring-petclinic-api-gateway $ECR_REGISTRY/$ECR_REPOSITORY:latest
                          
         - name: Push Docker Image to Amazon ECR Public
           run: docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
