--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -4,42 +4,43 @@ on:
   push:
     branches:
     - gateway  
+
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-        - name: Checkout Repository
-          uses: actions/checkout@v2
-      
-        - name: Setup Node.js
-          uses: actions/setup-node@v4
-          with:
-            node-version: '14'  
-      
-        - name: Build Docker Image
-          run: docker build -t service-api-gateway:latest .     
-        - name: Authenticate to Amazon ECR Public
-          uses: aws-actions/configure-aws-credentials@v2
-          with:
-            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            aws-region: ${{ secrets.AWS_REGION }}
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '14'  
+    
+    - name: Build Docker Image
+      run: docker build -t service-api-gateway:latest .     
+
+    - name: Authenticate to Amazon ECR Public
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
         
-        - name: Get ECR Public Login Password
-          run: aws ecr-public get-login-password --region ${{ secrets.AWS_REGION }}
-         
-        - name: Docker Login
-          uses: aws-actions/amazon-ecr-login@v1
-          env:
-            ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-            ECR_REPOSITORY: spring-petclinic-api-gateway
-          with:
-            registry: public.ecr.aws
-            registry-type: public
-            run: echo "${{ steps.ecr-login.outputs.password }}" | docker login --username AWS --password-stdin -i $ECR_REGISTRY
-        - name: Tag Docker Image
-          run: docker tag spring-petclinic-api-gateway $ECR_REGISTRY/$ECR_REPOSITORY:latest
-                         
-        - name: Push Docker Image to Amazon ECR Public
-          run: docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
-          
+    - name: Get ECR Public Login Password
+      id: ecr-login
+      run: echo "::set-output name=password::$(aws ecr-public get-login-password --region ${{ secrets.AWS_REGION }})"
+     
+    - name: Docker Login
+      uses: aws-actions/amazon-ecr-login@v1
+      with:
+        registry: public.ecr.aws
+        aws-region: ${{ secrets.AWS_REGION }}
+        registry-type: public
+        run: echo "${{ steps.ecr-login.outputs.password }}" | docker login --username AWS --password-stdin public.ecr.aws
+
+    - name: Tag Docker Image
+      run: docker tag service-api-gateway:latest public.ecr.aws/h7a4i4a9/service-api-gateway:latest
+                     
+    - name: Push Docker Image to Amazon ECR Public
+      run: docker push public.ecr.aws/h7a4i4a9/service-api-gateway:latest
