--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-    - gateway  
+      - gateway  
 
 jobs:
   build:
@@ -18,7 +18,7 @@ jobs:
         node-version: '14'  
     
     - name: Build Docker Image
-      run: docker build -t service-api-gateway:latest .     
+      run: docker build -t ${{ secrets.ECR_REPOSITORY_NAME }}:latest .
 
     - name: Authenticate to Amazon ECR Public
       uses: aws-actions/configure-aws-credentials@v2
@@ -34,13 +34,14 @@ jobs:
     - name: Docker Login
       uses: aws-actions/amazon-ecr-login@v1
       with:
-        registry: public.ecr.aws
+        registry: ${{ secrets.ECR_REGISTRY }}
         aws-region: ${{ secrets.AWS_REGION }}
         registry-type: public
-        run: echo "${{ steps.ecr-login.outputs.password }}" | docker login --username AWS --password-stdin public.ecr.aws
+        run: echo "${{ steps.ecr-login.outputs.password }}" | docker login --username AWS --password-stdin ${{ secrets.ECR_REGISTRY }}
 
     - name: Tag Docker Image
-      run: docker tag service-api-gateway:latest public.ecr.aws/h7a4i4a9/spring-petclinic-api-gateway:latest
+      run: docker tag ${{ secrets.ECR_REPOSITORY_NAME }}:latest ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
                      
     - name: Push Docker Image to Amazon ECR Public
-      run: docker push public.ecr.aws/h7a4i4a9/spring-petclinic-api-gateway:latest
+      run: docker push ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+
